--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
+    "react-bootstrap": "^2.9.0",
+    "react-datepicker": "^4.19.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
